Add tags and links

--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
 <ul>
 <li><code>python-crfsuite</code></li>
 </ul>
+
+<h3>
+<a id="tags" class="anchor" href="#tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tags</h3>
+<p>indicNLP, IRE, NLP, Indian Languages, Gujarati, Hindi, Tokenizer, stopwords, POS tagger, Stemmer, NER, Document Classification, Categorization, Spelling Variation Identification, Writing Variation Identification, text processing.
+<p>Information Retrieval and Extraction Course, Major Project, IIIT-H.
+
+<h3>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Links</h3>
+<p>
+GitHub repository: <a href="https://github.com/nisargjhaveri/indicNLP/">https://github.com/nisargjhaveri/indicNLP/</a><br>
+Project homepage: <a href="http://nisargjhaveri.github.io/indicNLP">http://nisargjhaveri.github.io/indicNLP</a><br>
+<p>
+Project report: <a href="http://nisargjhaveri.github.io/indicNLP/report.pdf">http://nisargjhaveri.github.io/indicNLP/report.pdf</a><br>
+SlideShare: <a href="http://www.slideshare.net/NisargJhaveri/indicnlp-a-text-processing-framework-for-indian-languages">http://www.slideshare.net/NisargJhaveri/indicnlp-a-text-processing-framework-for-indian-languages</a><br>
+DropBox: <a href="https://www.dropbox.com/sh/uslvll3pzi7dbz9/AAC8nFKLcNzw39ZAe6PFpb9ia?dl=0">DropBox shared folder</a><br>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nisargjhaveri">nisargjhaveri</a></p>
@@ -60,6 +76,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
