--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
 <h3>
 <a id="tags" class="anchor" href="#tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tags</h3>
-<p>indicNLP, IRE, NLP, Indian Languages, Gujarati, Hindi, Tokenizer, stopwords, POS tagger, Stemmer, NER, Document Classification, Categorization, Spelling Variation Identification, Writing Variation Identification, text processing.
+<p>indicNLP, IRE, NLP, Indian Languages, Tokenizer, stopwords, POS tagger, Stemmer, NER, Document Classification, Categorization, Spelling Variation Identification, Writing Variation Identification, text processing.
+<p>Assamese, Bengali, Gujarati, Hindi, Kannada, Konkani, Malayalam, Marathi, Nepali, Oriya, Punjabi, Sindhi, Tamil, Telugu, Tibetan.
 <p>Information Retrieval and Extraction Course, Major Project, IIIT-H.
 
 <h3>
