Update links, add YouTube link

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
 <h3>
 <a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Links</h3>
 <p>
-GitHub repository: <a href="https://github.com/nisargjhaveri/indicNLP/">https://github.com/nisargjhaveri/indicNLP/</a><br>
+GitHub repository: <a href="https://github.com/nisargjhaveri/indicNLP">https://github.com/nisargjhaveri/indicNLP</a><br>
 Project homepage: <a href="http://nisargjhaveri.github.io/indicNLP">http://nisargjhaveri.github.io/indicNLP</a><br>
 <p>
 Project report: <a href="http://nisargjhaveri.github.io/indicNLP/report.pdf">http://nisargjhaveri.github.io/indicNLP/report.pdf</a><br>
-SlideShare: <a href="http://www.slideshare.net/NisargJhaveri/indicnlp-a-text-processing-framework-for-indian-languages">http://www.slideshare.net/NisargJhaveri/indicnlp-a-text-processing-framework-for-indian-languages</a><br>
+YouTube (Presentation and Demo): <a href="https://youtu.be/Pwh1NYAF5Gw">https://youtu.be/Pwh1NYAF5Gw</a><br>
+SlideShare (Presentation): <a href="http://www.slideshare.net/NisargJhaveri/indicnlp-a-text-processing-framework-for-indian-languages">http://www.slideshare.net/NisargJhaveri/indicnlp-a-text-processing-framework-for-indian-languages</a><br>
 DropBox: <a href="https://www.dropbox.com/sh/uslvll3pzi7dbz9/AAC8nFKLcNzw39ZAe6PFpb9ia?dl=0">DropBox shared folder</a><br>
 
       </section>
