--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@ DropBox: <a href="https://www.dropbox.com/sh/uslvll3pzi7dbz9/AAC8nFKLcNzw39ZAe6P
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-60909615-1', 'auto');
+        ga('send', 'pageview');
+    </script>
   </body>
 </html>
